--- a/views/horse.handlebars
+++ b/views/horse.handlebars
@@ -97,7 +97,7 @@
                     <label for="owner">Owner Id</label>
                     <input type="text" id="owner" name="owner">
                 </div>
-                <button id="submit">Submit</button>
+                <button id="submit-owner-horse">Submit</button>
             </form>
         </div>
         <div id="col-2">
