--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -120,9 +120,8 @@ body {
   margin: 0;
 }
 body {
-  background: white;
   font-size: 35px;
-  /* background: black; */
+  background: black;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
