--- a/views/contactUs.handlebars
+++ b/views/contactUs.handlebars
@@ -1,8 +1,8 @@
-<div class="container">
-    <img id="contact-us-image" src="/images/boarding-options.jpg" />
-    <h3>Contact Hidden Timber Farm</h3>
+<div class="container" id="contact-us-form">
 
-    <form class="validateForm" action="/contact" id="contact-form" method="post" role="form">
+    <h3 id="contact-head">CONTACT HIDDEN TIMBER FARM</h3>
+<div>
+    <form class="validateForm" id="contact-form" action="/contact" id="contact-form" method="post" role="form">
         <fieldset>
             <div class="style">
                 <label for="name">Name*</label>
@@ -18,10 +18,11 @@
                 <textarea id="message" name="message" placeholder="Enter your message to Hidden Timber Farm here"
                     rows="3" required></textarea>
 
-                <input type="submit" id="contact-send-button" value="Send">
-                <input type="reset" id="contact-clear-button" value="Clear">
+                <input type="submit" id="contact-send-button" value="SEND">
+                <input type="reset" id="contact-clear-button" value="CLEAR">
         </fieldset>
     </form>
+    </div>
     <h6>*Required fields</h6>
 
     <h5>Please allow a few business days for us to respond. Thank you.</h5>
