--- a/views/contactSuccess.handlebars
+++ b/views/contactSuccess.handlebars
@@ -1,11 +1,12 @@
-<div class="container">
-    <h2 id="contact-success-message">Thank you for contacting us. <br>
-        Your form was successfully sent. <br>
-        Please allow a few business days <br>
-        for us to respond. </h2>
+<div class="container" id="contactSuccessBG">
+    <div>
+        <h2 id="contact-success-message">Thank you for contacting us. <br>
+            Your form was successfully sent. <br>
+            Please allow a few business days <br>
+            for us to respond. </h2>
 
-        <img id="contact-success-image" src="/images/chad-madden-zy-t2K5JmWE-unsplash.jpg" />
-
+        {{!-- <img id="contact-success-image" src="/images/chad-madden-zy-t2K5JmWE-unsplash.jpg" /> --}}
+    </div>
     <div class="nav" id="nav">
         <div class="navIn" id="navIn">
             <div class="navOut" id="navOut">
@@ -14,6 +15,12 @@
                         <li class=""><a href="#">Home</a></li>
                     </div>
                 </ul>
+            </div>
+            <div>
+
+            </div>
+            <div>
+
             </div>
         </div>
     </div>
