connecting all the handlebars

--- a/public/styles/owner&horse.css
+++ b/public/styles/owner&horse.css
@@ -13,15 +13,6 @@ label {
 table {
     table-layout: fixed;
 }
-.container {
-    padding: 2.5rem;
-    background: url(../images/owner&horse.jpeg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    position: static;
-}
 .error {
     font-size: medium;
     color: red;
@@ -30,6 +21,16 @@ table {
 }
 .delete, .delete:hover {
     color: red;
+}
+
+.owner-horse-background {
+    padding: 2.5rem;
+    background: url(../images/owner&horse.jpeg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    position: static;
 }
 
 .style {
@@ -56,6 +57,8 @@ table {
     padding: 2.5rem;
     border-radius: 5px;
 }
+
+
 
 #row {
     /* border: 1px solid red; */
