--- a/views/horse.handlebars
+++ b/views/horse.handlebars
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="owner-horse-background">
     <div id="row">
         <div id="col-1">
-            <h3>Stable Manager Input Horse's Data</h3>
+            <h3>Stable Manager Input Horse Data</h3>
             <form class="validateForm">
                 <div class="style">
                     <label for="name">Name</label>
@@ -101,7 +101,7 @@
             </form>
         </div>
         <div id="col-2">
-            <h3>Horse's List</h3>
+            <h3>Horses List</h3>
             <table>
                 <thead>
                 <tr>
@@ -126,6 +126,18 @@
     </div>
     {{!-- stable manager is able to update and delete horse's data --}}
     {{!-- try to show the horse's data base on owners --}}
+
+    <div class="nav" id="nav">
+        <div class="navIn" id="navIn">
+            <div class="navOut" id="navOut">
+                <ul class="menu menu-hover-lines">
+                    <div class="navLogOut">
+                        <li><a href="/"> Log Out</a></li>
+                    </div>
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
 
 
