--- a/views/horseOwnerLoginLanding.handlebars
+++ b/views/horseOwnerLoginLanding.handlebars
@@ -55,11 +55,12 @@
                 </div>
             </div>
         </div>
+        <h2 id="event-header">Questions? <br>
+          Contact the Stable Manager</h2>
     </div>
 </div>
 
-<h2 id="event-header">Questions? <br>
-    Contact the Stable Manager</h2>
+
 
   <div class="nav" id="nav">
       <ul class="menu menu-hover-lines">
@@ -72,20 +73,8 @@
 
         <div class="navOut" id="navOut">
           <ul class="menu menu-hover-lines">
-            <div class="navHome">
-              <li class=""><a href="#">Home | </a></li>
-
-            </div>
-            {{!-- <div class="navService">
-              <li><a href="#">Services- </a></li>
-
-            </div> --}}
-            {{!-- <div class="navContact">
-              <li><a href="#">Contact- </a></li> --}}
-
             <div class="navLogOut">
-              <li><a href="#"> Log Out</a></li>
-
+              <li><a href="/"> Log Out</a></li>
             </div>
           </ul>
         </div>
