--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -177,15 +177,15 @@
       <ul class="menu menu-hover-lines">
         <div class="navIn" id="navIn">
           <ul class="menu menu-hover-lines">
-            <li><a href="#"> Contact Us | </a></li>
-            <li><a href="#"> Log In </a></li>
+            <li><a href="/contact"> Contact Us | </a></li>
+            <li><a href="/ownerlogin"> Log In </a></li>
           </ul>
         </div>
 
         <div class="navOut" id="navOut">
           <ul class="menu menu-hover-lines">
             <div class="navHome">
-              <li class=""><a href="#">Home |</a></li>
+              <li class=""><a href="/">Home |</a></li>
 
             </div>
             {{!-- <div class="navService">
