--- a/views/owner.handlebars
+++ b/views/owner.handlebars
@@ -1,7 +1,7 @@
-<div class="container" id="background">
+<div class="owner-horse-background">
     <div id="row">
         <div id="col-1">
-            <h3>Stable Manager Input Owner's Data</h3>
+            <h3>Stable Manager Input Owner Data</h3>
             <form class="validateForm">
                 <div class="style">
                     <label for="first"> First Name</label>
@@ -55,7 +55,7 @@
             </form>
         </div>
         <div id="col-2">
-            <h3>Owner's List</h3>
+            <h3>Owners List</h3>
             <table>
                 <thead>
                 <tr>
@@ -77,8 +77,20 @@
             </tbody>
             </table>
         </div>
-    </div>    
+    </div> 
+    <div class="nav" id="nav">
+        <div class="navIn" id="navIn">
+            <div class="navOut" id="navOut">
+                <ul class="menu menu-hover-lines">
+                    <div class="navHome">
+                        <li class=""><a href="/horse">Horses Data</a></li>
+                    </div>
+                </ul>
+            </div>
+        </div>
+    </div>   
 </div>
+
 
 <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.js"></script>
