--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -634,12 +634,14 @@ padding: 20px;
 }
 
 #contact-us-form {
-  background: url(../images/chad-madden-zy-t2K5JmWE-unsplash.jpg) no-repeat center center fixed;
+    background: url(../images/chad-madden-zy-t2K5JmWE-unsplash.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     position: static;
+    width: 100%;
+    height: 100%;
 }
 
 h5 {
