fixed breaks and spacing on 1st two pages and fixed padding on contact us form

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,13 +12,7 @@
         </h1>
         <h2>Please fill in your name:</h2>
       </div>
-
-      {{!-- <h1 id="h1">Hidden Timber Farm</h1>
-      <div class="city" id="city">
-        Gardner, Kansas
-        Boarding and Trails
-      </div>
-      <h1 id="h1">please fill in your name</h1> --}}
+      
       <input id="input"></input>
       <button class="button large" id="nameButton">ENTER</button>
     </div>
@@ -50,7 +44,7 @@
                 <p>
                   We here at Hidden Timber Farm work hard to provide a premier boarding experience for our clients and
                   their beloved equine companions. Read on to learn about our horse boarding options and some of
-                  amenities we offer. Then give us a call at 913-123-4567, or fill out the Contact Us form. We look forward to speaking with you, _________.
+                  amenities we offer. Then give us a call at 913-123-4567, or fill out the Contact Us form. We look forward to speaking with you, <span id="visitorName">________.</span>
                 </p>
               </div>
               <h3 class="content__index">01</h3>
