fix owner and horse's navbar

--- a/views/horse.handlebars
+++ b/views/horse.handlebars
@@ -123,21 +123,20 @@
             </tbody>
             </table>
         </div>
-    </div>
-    {{!-- stable manager is able to update and delete horse's data --}}
-    {{!-- try to show the horse's data base on owners --}}
-
-    <div class="nav" id="nav">
-        <div class="navIn" id="navIn">
-            <div class="navOut" id="navOut">
-                <ul class="menu menu-hover-lines">
-                    <div class="navLogOut">
-                        <li><a href="/"> Log Out</a></li>
-                    </div>
-                </ul>
+        <div class="nav-horse" id="nav">
+            <div class="navIn" id="navIn">
+                <div class="navOut" id="navOut">
+                    <ul class="menu menu-hover-lines">
+                        <div class="navLogOut">
+                            <li><a href="/"> Log Out</a></li>
+                        </div>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
+    {{!-- stable manager is able to update and delete horse's data --}}
+    {{!-- try to show the horse's data base on owners --}}
 </div>
 
 
