--- a/views/owner.handlebars
+++ b/views/owner.handlebars
@@ -77,19 +77,20 @@
             </tbody>
             </table>
         </div>
-    </div> 
-    <div class="nav" id="nav">
-        <div class="navIn" id="navIn">
-            <div class="navOut" id="navOut">
-                <ul class="menu menu-hover-lines">
-                    <div class="navHome">
-                        <li class=""><a href="/horse">Horses Data</a></li>
-                    </div>
-                </ul>
+        <div class="nav-owner" id="nav">
+            <div class="navIn" id="navIn">
+                <div class="navOut" id="navOut">
+                    <ul class="menu menu-hover-lines">
+                        <div class="navHome">
+                            <li class=""><a href="/horse">Horses Data</a></li>
+                        </div>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>   
+    </div> 
 </div>
+
 
 
 <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
