--- a/public/styles/owner&horse.css
+++ b/public/styles/owner&horse.css
@@ -69,3 +69,17 @@ table {
     font-size: 16px;
     background: white;
 }
+
+.nav-owner{
+    float: right;
+    max-width: 270px;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.nav-horse {
+    float: right;
+    max-width: 180px;
+    width: 100%;
+    margin-top: 20px;
+}
