fixed background and added navbar to contact success and failure pages and fixed owner landing page

--- a/views/contactFailure.handlebars
+++ b/views/contactFailure.handlebars
@@ -1,10 +1,14 @@
-<div class="container">
-
-    <h2 id="contact-failure-message">We're sorry, but there was a problem with your form submission. <br>
-        You may email us at stablemanager@hiddentimberfarm.com or call us at 123-456-7890.
-    </h2>
-
-    <img id="contact-failure-image" src="/images/3-ponies.jpg" />
+<div class="container" id="contactFailureBG">
+    <p style="line-height: 100%;">
+        <br>
+    </p>
+    <div id="contact-failure-message-box">
+    <h3 id="contact-failure-message">There was a problem with your form submission. <br>
+        You may email us at <br>
+        stablemanager@hiddentimberfarm.com <br>
+        or call us at 123-456-7890.
+    </h3>
+</div>
 
     <div class="nav" id="nav">
         <div class="navIn" id="navIn">
