--- a/views/contactSuccess.handlebars
+++ b/views/contactSuccess.handlebars
@@ -1,9 +1,12 @@
 <div class="container" id="contactSuccessBG">
-    <div>
-        <h2 id="contact-success-message">Thank you for contacting us. <br>
+    <p style="line-height: 100%;">
+        <br>
+    </p>
+    <div id="contact-success-message-box">
+        <h3 id="contact-success-message">Thank you for contacting us. <br>
             Your form was successfully sent. <br>
             Please allow a few business days <br>
-            for us to respond. </h2>
+            for us to respond. </h3>
     </div>
     <div class="nav" id="nav">
         <div class="navIn" id="navIn">
