--- a/views/contactUs.handlebars
+++ b/views/contactUs.handlebars
@@ -26,5 +26,15 @@
     <h6>*Required fields</h6>
 
     <h5>Please allow a few business days for us to respond. Thank you.</h5>
-
+<div class="nav" id="nav">
+        <div class="navIn" id="navIn">
+            <div class="navOut" id="navOut">
+                <ul class="menu menu-hover-lines">
+                    <div class="navHome">
+                        <li class=""><a href="/">Home</a></li>
+                    </div>
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
