--- a/views/horseOwnerLoginLanding.handlebars
+++ b/views/horseOwnerLoginLanding.handlebars
@@ -1,9 +1,12 @@
-<div class="container">
-    <h2 id="event-header">UPCOMING EVENTS & APPOINTMENTS<br>
-    for Horse Owners</h2>
-    <br>
-    <br>
-    <div class="grid-x grid-padding-x align-center-middle text-center" style="height: 200px;">
+<div class="container" id="owner-landing-page-background">
+
+    <div id="event-header">
+        <h2>UPCOMING EVENTS & APPOINTMENTS<br>
+            for Horse Owners</h2>
+    </div>
+
+    <div class="grid-x grid-padding-x align-center-middle text-center" style="height: 200px; max-width=">
+
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
@@ -16,6 +19,7 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
@@ -25,11 +29,12 @@
                 <div class="flip-card-back">
                     <h3>Farrier Day</h3>
                     <h6>with Jeff Miller<h6>
-                    <h6>Friday, January 31, 2020</br>
-                        starting at Noon</h6>
+                            <h6>Friday, January 31, 2020</br>
+                                starting at Noon</h6>
                 </div>
             </div>
         </div>
+
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
@@ -43,42 +48,37 @@
                 </div>
             </div>
         </div>
+
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
                     <img src="/images/bonfire.jpeg" alt="bonfire" style="width:300px;height:200px;">
                 </div>
                 <div class="flip-card-back">
-                    <h3>Hidden Timber Farm Bonfire</h3>
+                    <h3>Farm Bonfire</h3>
                     <h6>Join your barn friends for a bonfire.<br> Smores provided.</h6>
                     <h6>Friday, February 21, 2020, 6 to 9 p.m.</h6>
                 </div>
             </div>
         </div>
-        <h2 id="event-header">Questions? <br>
-          Contact the Stable Manager</h2>
-    </div>
-</div>
 
-
-
-  <div class="nav" id="nav">
-      <ul class="menu menu-hover-lines">
-        <div class="navIn" id="navIn">
-          {{!-- <ul class="menu menu-hover-lines">
-            <li><a href="#"> Contact Us | </a></li>
-            <li><a href="#"> Log In </a></li>
-          </ul>
-        </div> --}}
-
-        <div class="navOut" id="navOut">
-          <ul class="menu menu-hover-lines">
-            <div class="navLogOut">
-              <li><a href="/"> Log Out</a></li>
-            </div>
-          </ul>
+        <div>
+            <h2 id="owner-questions-message">Questions? <br>
+                Contact the Stable Manager</h2>
         </div>
     </div>
-  </div>
 
+
+    <div class="nav" id="nav">
+        <ul class="menu menu-hover-lines">
+            <div class="navIn" id="navIn">
+                <div class="navOut" id="navOut">
+                    <ul class="menu menu-hover-lines">
+                        <div class="navLogOut">
+                            <li><a href="/"> Log Out</a></li>
+                        </div>
+                    </ul>
+                </div>
+            </div>
+    </div>
 </div>
