--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -44,7 +44,7 @@
                 <p>
                   We here at Hidden Timber Farm work hard to provide a premier boarding experience for our clients and
                   their beloved equine companions. Read on to learn about our horse boarding options and some of
-                  amenities we offer. Then give us a call at 913-123-4567, or fill out the Contact Us form. We look forward to speaking with you.</span>
+                  amenities we offer. Then give us a call at 913-123-4567, or fill out the Contact Us form. We look forward to speaking with you.
                 </p>
               </div>
               <h3 class="content__index">01</h3>
