--- a/views/contactUs.handlebars
+++ b/views/contactUs.handlebars
@@ -28,3 +28,7 @@
     <h5>Please allow a few business days for us to respond. Thank you.</h5>
 
 </div>
+
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<link rel="stylesheet" href="/styles/animate.css">
+<script src="/js/frontend.js"></script>
