--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,27 +1,28 @@
 <div class="zebraFour" id="zebraFour">
 
-<div class="card-user-profile">
-  <div class="card-user-profile-content card-section">
-    <div class="card-user-profile-avatar">
-    </div>
-    <p class="card-user-profile-name">404: You've reached the wrong type of horse.</p>
-    <p class="card-user-profile-info"></p>
-  </div>
-
-  <div class="card-user-profile-actions">
-  </div>
-</div>
-<div class="zebraCage" id="zebraCage">
-<img id="zebra" src="/images/hiclipart.com.png" alt="Italian Trulli">
-</div>
-
-<div class="four-slider" id="scrollButton" data-magellan data-threshold="0">
-      <a href="/"><svg xmlns="http://www.w3.org/2000/svg" id="sliderButton" width="24" height="24"
-          viewBox="0 0 24 24">
-          <path
-            d="M24 12c0-6.627-5.373-12-12-12s-12 5.373-12 12 5.373 12 12 12 12-5.373 12-12zm-18.005-1.568l1.415-1.414 4.59 4.574 4.579-4.574 1.416 1.414-5.995 5.988-6.005-5.988z" />
-        </svg></a>
+  <div class="card-user-profile">
+    <div class="card-user-profile-content card-section">
+      <div class="card-user-profile-avatar">
+      </div>
+      <p class="card-user-profile-name">404: You've reached the wrong type of horse.</p>
+      <p class="card-user-profile-info"></p>
     </div>
 
+    <div class="card-user-profile-actions">
+    </div>
+  </div>
+  <div class="zebraCage" id="zebraCage">
+    <img id="zebra" src="/images/hiclipart.com.png" alt="Italian Trulli">
+  </div>
+
+  <div class="four-slider-full" id="scrollButton" data-magellan data-threshold="0">
+    <a href="/">
+      <img id="four-slider" src="/images/zebruh.png" alt="home" height="50" width="50">
+    </a>
+  </div>
+
 </div>
 
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<link rel="stylesheet" href="/styles/animate.css">
+<script src="/js/frontend.js"></script>
