--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,7 @@
 <div class="bg" id="bg">
   <div class="hero-full-screen">
 
-    {{!-- <div class="top-content-section" id="BlankSpace">
-    
-  </div> --}}
+
 
     <div class="middle-content-section center">
       <div id="h1">
@@ -26,9 +24,8 @@
     </div>
 
 
-  </div>
-
-  <div class="carousel">
+</div>
+<div class="carousel" id="carousel">
     <div class="carousel__control">
     </div>
     <div class="carousel__stage">
@@ -171,7 +168,7 @@
       <ul class="menu menu-hover-lines">
         <div class="navIn" id="navIn">
           <ul class="menu menu-hover-lines">
-            <li><a href="/contact"> Contact Us | </a></li>
+            <li id="contact-link"><a href="/contact"> Contact Us | </a></li>
             <li><a href="/ownerlogin"> Log In </a></li>
           </ul>
         </div>
