--- a/views/horse.handlebars
+++ b/views/horse.handlebars
@@ -107,7 +107,7 @@
                 <tr>
                     <th>First Name</th>
                     <th>Last Name</th>
-                    <th>Update Data</th>
+                    {{!-- <th>Update Data</th> --}}
                     <th>Delete Horse</th>
                 </tr>
             </thead>
@@ -116,7 +116,7 @@
                     <tr data-id="{{this.id}}">
                         <td>{{this.name}}</td>
                         <td>{{this.barnName}}</td>
-                        <td><a href="horse/{{this.id}}">Update Data</a></td>
+                        {{!-- <td><a href="horse/{{this.id}}">Update Data</a></td> --}}
                         <td><a class="delete">Delete Horse</a></td>
                     </tr>
                 {{/each}}
