--- a/views/owner.handlebars
+++ b/views/owner.handlebars
@@ -62,7 +62,7 @@
                     <th>Owner Id</th>
                     <th>First Name</th>
                     <th>Last Name</th>
-                    {{!-- <th>Update Data</th> --}}
+                    <th>Update Data</th>
                     <th>Delete Owner</th>
                 </tr>
             </thead>
@@ -72,7 +72,7 @@
                             <td>{{this.id}}</td>
                             <td>{{this.firstName}}</td>
                             <td>{{this.lastName}}</td>
-                            {{!-- <td><a href="owner/{{this.id}}">Update Data</a></td> --}}
+                            <td><a href="owner/{{this.id}}">Update Data</a></td>
                             <td><a class="delete">Delete Owner</a></td>
                         </tr>
                     {{/each}}
