--- a/views/contactUs.handlebars
+++ b/views/contactUs.handlebars
@@ -2,7 +2,7 @@
 
     <h3 id="contact-head">CONTACT HIDDEN TIMBER FARM</h3>
     <div>
-        <form class="validateForm" id="contact-form" action="/contact" id="contact-form" method="post" role="form">
+        <form class="validateForm" id="contact-form" action="/contact" method="post" role="form">
             <fieldset>
                 <div class="style">
                     <label for="name">Name*</label>
@@ -26,17 +26,18 @@
     <h6>*Required fields</h6>
 
     <h5>Please allow a few business days for us to respond. Thank you.</h5>
-</div>
 
-
-<div class="nav" id="nav">
-    <div class="navIn" id="navIn">
-        <div class="navOut" id="navOut">
-            <ul class="menu menu-hover-lines">
-                <div class="navHome">
-                    <li class=""><a href="/">Home</a></li>
-                </div>
-            </ul>
+    <div class="nav" id="nav">
+        <div class="navIn" id="navIn">
+            <div class="navOut" id="navOut">
+                <ul class="menu menu-hover-lines">
+                    <div class="navHome">
+                        <li class=""><a href="/">Home</a></li>
+                    </div>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
+
+
