--- a/views/horse.handlebars
+++ b/views/horse.handlebars
@@ -90,7 +90,7 @@
                     <select name="owner" id="owner">
                         <option value=""> Select Option</option>
                         {{#each owners}}
-                            <option value="">{{Datavalues.id}}</option>
+                            <option value={{owner.id}}>{{owner.id}}</option>
                         {{/each}}
                     </select> 
                 </div>
